Change text functional

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -16,6 +16,10 @@ body {
   box-sizing: border-box;
 }
 
+pre {
+  white-space: break-spaces;
+}
+
 .b_black {
   background-color: black;
   color: #fafafa;
