--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -263,7 +263,12 @@ pre {
   width: 60%;
 }
 
+.g-recaptcha {
+  margin: 30px 0 0 0;
+  display: inline-grid;
+  align-items: center;
 
+}
 
 .news-title-edit {
   position: relative;
@@ -275,10 +280,12 @@ pre {
 .edit-form {
   line-height: 100%;
 }
+
 .edit_news {
-  display:grid;
+  display: grid;
   gap: 1rem;
 }
+
 .form_edit_news {
   display: grid;
   gap: 1rem;
@@ -756,7 +763,7 @@ button:hover,
 
 .list-menu-point {}
 
-.counter{
+.counter {
   width: 1.011rem;
 }
 
@@ -971,6 +978,59 @@ textarea#wmd-input {
 .msg_body {
   padding: 1rem;
 }
+
+/* --------------------------------------------------------------------------- */
+
+#zatemnenie {
+  background: rgba(102, 102, 102, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#okno {
+  width: 30rem;
+  height: 16rem;
+  text-align: center;
+  padding: 15px;
+  border: 3px solid #ffc400;
+  border-radius: 10px;
+  color: #000000;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  background: #fff;
+}
+
+#zatemnenie:target {
+  z-index: 999;
+  display: block;
+}
+
+.close {
+  display: inline-block;
+  border: 1px solid #0000cc;
+  color: #0000cc;
+  padding: 0 12px;
+  margin: 10px;
+  text-decoration: none;
+  background: #f2f2f2;
+  font-size: 14pt;
+  cursor: pointer;
+}
+
+.close:hover {
+  background: #e6e6ff;
+}
+
+/*--------------------------------------------------------------- */
+
 
 .msg_close {
   content: "";
